# skel

./: '  .gitignore  Cargo.toml  README.md  fake_js_proj.toml
docs/: PKGBUILD  _skel  _skel.bak  example.config.toml  example.javascript.toml  test_include.txt  todo.md  todo.txt
docs/projects/: python.toml
misc/: PKGBUILD  _skel  example.config.toml
misc/projects/: python.toml
old/: args.rs  config.rs  skeleton.rs  test_utils.rs
project_name/: .eslint.json  package.json
project_name/src/: main.js
src/: args.rs  config.rs  fs_tools.rs  lib.rs  main.rs  new_rs_error.rs  parse_args.rs  process_tools.rs  project.rs  project_tree.rs  skel_error.rs  skeleton.rs  system_tools.rs  template.rs  templating.rs  test_utils.rs
src/cli/: defaults.rs  mod.rs  my_utils.rs  parse_args.rs
test_project/src/: main.js
test_project/tests/: test_main.js
