[package]
name = "skel"
version = "0.1.1"
authors = ["chris <chrisrhayden@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust_lang.org/cargo/reference/manifest.html
[[bin]]
name = "skel"
path = "src/bin/skel.rs"

[[bin]]
name = "_skel_completion"
path = "src/bin/completion.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
handlebars = "4"
toml = "0.7"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
